# transformer-from-scratch

./: .gitignore  README.md  model.py  pyproject.toml
learning-log/: 2025-03-15.md  2025-03-17.md  2025-03-18.md  2025-03-19.md  2025-03-20.md  2025-03-21.md  2025-03-24.md
src/: config.py  dataset.py  model.py  train.py
