[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.1",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torchmetrics>=1.6.3",
    "torchtext>=0.18.0",
    "torchvision>=0.21.0",
    "types-tqdm>=4.67.0.20250319",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.10.0",
]

[tool.mypy]
disallow_untyped_defs = true

[tool.ruff]
lint.select = ["E", "F", "I", "W"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
# allow unused imports in __init__.py
"__init__.py" = ["F401"]
